--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
         "port" : 12345
     },
     "camera": {
-        "mode" : "camera",
-        "device" : "/dev/video0",
+        "mode" : "video",
+        "device" : "./traffic_light_test1.mp4",
         "width" : 1920,
         "height" : 1080,
         "framerate" : 30,
