--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
     "socket": {
         "host" : "192.168.20.120",
-        "port" : 12345
+        "port" : 12345,
+        "broadcast_port" : 37020
     },
     "camera": {
         "mode" : "video",
-        "device" : "./traffic_light_test1.mp4",
+        "device" : "traffic_light_test1.mp4",
         "width" : 1920,
         "height" : 1080,
         "framerate" : 30,
